@@ -1,6 +1,10 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-5/24/12: Fixed problem where eTomo freezes on Ubuntu when is looks for lsof in the wrong directory (In 4.5).(Bug# 1617)
+5/26/12: Made Taperoutvol and  Assemblevol preserve angles in header so they
+are not lost when running NAD (In 4.5).
+
+5/24/12: Fixed problem where eTomo freezes on Ubuntu when is looks for lsof in
+the wrong directory (In 4.5).(Bug# 1617)
 
 5/21/12: Fixed get_nxyz to take long filenames, which should fix Setupcombine
 and some other combine steps (In 4.5).
